--- a/PixelStudio/Views/Administration/Edit_Service.cshtml
+++ b/PixelStudio/Views/Administration/Edit_Service.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PixelStudio.Models.PhotoService
 
 @{
-    ViewBag.Title = "Edit Service";
+    ViewBag.Title = "Edit_Service";
 }
 
 <h2>Edit_Service</h2>
@@ -62,6 +62,14 @@
                 @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        @*<div class="form-group">
+            @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
