loading photos from DB added

--- a/PixelStudio/Content/Site.css
+++ b/PixelStudio/Content/Site.css
@@ -1,6 +1,10 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    width:auto;
+    width:100%;
+    height:auto;
+
 }
 
 /* Set padding to keep content from hitting the edges */
