--- a/PixelStudio/Views/Home/Home.cshtml
+++ b/PixelStudio/Views/Home/Home.cshtml
@@ -2,8 +2,65 @@
 @{
     ViewBag.Title = "Home";
 }
+<div style="display:flex">
 
-<h2>Home</h2>
+    <div >
+        <div class="col-12 col-md-3 col-xl-2 bd-sidebar" style="margin-top: 20px; width:100%;">
 
-<div class="bg-dark">Pixel Studio is a company that gives different photo services for clients</div>
+            <form class="bd-search d-flex align-items-center">
+                <span class="algolia-autocomplete" style="position: relative; display: inline-block; direction: ltr;">
+                    <input type="search" class="form-control ds-input" id="search-input" placeholder="Search..." aria-label="Search for..." autocomplete="off" spellcheck="false" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;"><pre aria-hidden="true" style="position: absolute; visibility: hidden; white-space: pre; font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, &quot;Helvetica Neue&quot;, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; font-size: 16px; font-style: normal; font-variant: normal; font-weight: 400; word-spacing: 0px; letter-spacing: normal; text-indent: 0px; text-rendering: auto; text-transform: none;"></pre><span class="ds-dropdown-menu" role="listbox" id="algolia-autocomplete-listbox-0" style="position: absolute; top: 100%; z-index: 100; display: none; left: 0px; right: auto;">
+                        <div class="ds-dataset-1"></div>
+                    </span>
+                </span>
+                <button style="margin: 20px 0 20px 0; border-color: black;border-width: medium; border-radius: 10px;" class="btn btn-link bd-search-docs-toggle d-md-none p-0 ml-3" type="button" data-toggle="collapse" data-target="#bd-docs-nav" aria-controls="bd-docs-nav" aria-expanded="false" aria-label="Toggle docs navigation">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30" focusable="false"><title>Menu</title><path stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"></path></svg>
+                </button>
+            </form>
+
+            <nav class="collapse bd-links" id="bd-docs-nav">
+                <div class="bd-toc-item">
+                    <a class="bd-toc-link" style="padding: 5px;" href="#">Типы услуг:</a>
+
+                    <ul class="nav bd-sidenav">
+                        <li>
+                            <a href="#">Для монохромных фото</a>
+                        </li>
+                        <li>
+                            <a href="/docs/4.0/getting-started/download/">Для цветных фото</a>
+                        </li>
+                        <li>
+                            <a href="/docs/4.0/getting-started/contents/">Для всех типов</a>
+                        </li>
+
+                    </ul>
+                </div><div class="bd-toc-item">
+                    <a class="bd-toc-link" href="" style="padding: 5px;">
+                        Сортировка
+                    </a>
+
+                    <ul class="nav bd-sidenav">
+                        <li>
+                            <a href="/docs/4.0/layout/overview/">
+                                За возрастанием цены
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/docs/4.0/layout/grid/">
+                                За убыванием цены
+                            </a>
+                        </li>
+
+                    </ul>
+
+                </div>
+            </nav>
+
+        </div>
+    </div>
+    <h2 style="text-align: center; padding-left:30%">Home</h2>
+    
+</div>
+<div style="align-content:center">Pixel Studio is a company that gives different photo services for clients</div>
+
 
