--- a/PixelStudio/Views/Home/Home.cshtml
+++ b/PixelStudio/Views/Home/Home.cshtml
@@ -1,10 +1,61 @@
-﻿
+﻿@model IEnumerable<PixelStudio.Models.PhotoService>
 @{
     ViewBag.Title = "Home";
 }
-<div style="display:flex">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-    <div >
+<style>
+
+</style>
+
+<div style="display:flex">
+    <div style="height:500px; width:60%; text-align:center;">
+        <div id="carousel" class="carousel slide">
+            <ol class="carousel-indicators">
+                <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel" data-slide-to="1"></li>
+                <li data-target="#carousel" data-slide-to="2"></li>
+            </ol>
+
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="~/image/инстабук.jpg" style="height:500px; width:500px" />
+                    <div class="container">
+                        <div class="carousel-caption"></div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="~/image/рамка.jpg" style="height:500px; width:500px" />
+                    <div class="container">
+                        <div class="carousel-caption"></div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="~/image/Календарь.jpg" style="height:500px; width:500px" />
+                    <div class="container">
+                        <div class="carousel-caption"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div style="height:auto">
+            <a style="height:75.3%" href="#carousel" class="left carousel-control" data-slide="prev">
+                <span class="icon-prev"></span>
+            </a>
+        </div>
+        <div style="height:auto">
+            <a style="height:75.3%" href="#carousel" class="right carousel-control" data-slide="next">
+                <span class="icon-next"></span>
+            </a>
+        </div>
+
+
+
+    </div>
+    
+    <div>
+        <h2 align="center">Home page</h2>
         <div class="col-12 col-md-3 col-xl-2 bd-sidebar" style="margin-top: 20px; width:100%;">
 
             <form class="bd-search d-flex align-items-center">
@@ -58,9 +109,28 @@
 
         </div>
     </div>
-    <h2 style="text-align: center; padding-left:30%">Home</h2>
     
+
 </div>
-<div style="align-content:center">Pixel Studio is a company that gives different photo services for clients</div>
+<div style="width:100%; margin-top:30px;">
+    <h3>Pixel Studio - компания предоставляющая услуги печати фотографий</h3><br />
+    <b>Нашей целью появления на рынке стало точно не получение денег</b>
+    <h4><u>Главное для нас :</u></h4>
+    <ul>
+        <li>Избавить вас от спешки</li>
+        <li>Избавить вас от очередей</li>
+        <li>Избавить вас от пристальных взгядов других</li>
+        <li>Избавить вас от поиска мелких денег</li>
+        <li>Подарить вам полную конфиденциальность и ваш сюрприз останется сюрпризом для родного человека</li>
+    </ul>
 
+</div>
+<script>
+    $('#carousel').carousel({
+        interval: 1000
 
+    });
+</script>
+
+<script src="~/Scripts/bootstrap.min.js"></script>
+<script src="~/Scripts/jquery-3.3.1.min.js"></script>
