--- a/PixelStudio/Views/Shared/_Layout.cshtml
+++ b/PixelStudio/Views/Shared/_Layout.cshtml
@@ -7,19 +7,26 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <style>
-        a:link{
-            color:cadetblue;
+        a:link {
+            color: cadetblue;
         }
+
         a:visited {
             color: cadetblue;
         }
-        a:active{
-            color:forestgreen;
+
+        a:active {
+            color: forestgreen;
         }
-        a :hover{
-            color:brown;
+
+        a :hover {
+            color: brown;
         }
+
     </style>
+    
+        <link rel="shortcut icon" href="~/image/Site.ico" type="image/x-icon">
+    
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -37,14 +44,14 @@
                     <li>@Html.ActionLink("Home", "Home", "Home")</li>
                     <li>@Html.ActionLink("Make Order", "Insert", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    
+
 
                     <li class="nav-item dropdown" style="margin-left:500px;">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Authorization</a>
-                        <div  style="background-color:#101010; text-align: center;padding: 10px;"  class="dropdown-menu" aria-labelledby="dropdown01">
+                        <div style="background-color:#101010; text-align: center;padding: 10px;" class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item" href="#">@Html.ActionLink("Login", "Enter", "UserLogin")</a>
                             <a class="dropdown-item" href="#">@Html.ActionLink("Register", "Register", "UserLogin")</a>
-                       
+
                         </div>
                     </li>
                 </ul>
@@ -54,15 +61,19 @@
     <div class="container">
         @RenderBody()
     </div>
-    <div>
+    <div style="margin-top:20px; text-align:center">
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p >&copy; @DateTime.Now.Year - Pixel Studio<br />Project was created by Markovets N.S</p>
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
 </body>
 </html>
