--- a/PixelStudio/Views/Administration/Create_new_Service.cshtml
+++ b/PixelStudio/Views/Administration/Create_new_Service.cshtml
@@ -7,7 +7,7 @@
 <h2>Create_new_Service</h2>
 
 
-@using (Html.BeginForm("Create_new_Service", "Administration" , FormMethod.Post,new {enctype="multipart/form-data" }))
+@using (Html.BeginForm("Create new Service", "Administration" , FormMethod.Post,new {enctype="multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
