--- a/PixelStudio/Content/Site.css
+++ b/PixelStudio/Content/Site.css
@@ -1,11 +1,4 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-    width:auto;
-    width:100%;
-    height:auto;
-
-}
+﻿
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
@@ -25,4 +18,82 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+
+body {
+    overflow: auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding-top: 50px;
+    padding-bottom: 20px;
+    width: auto;
+    width: 100%;
+    height: auto;
+}
+
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 7px;
+    border-radius: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-border-radius: 10px;
+    /*border-radius: 10px;*/
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(255,0,0,0.8);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+
+    ::-webkit-scrollbar-thumb:window-inactive {
+        background: rgba(255,0,0,0.4);
+    }
+
+/*a:link {
+    color: cadetblue;
+}
+
+a:visited {
+    color: cadetblue;
+}
+
+a:active {
+    color: forestgreen;
+}
+
+a :hover {
+    color: brown;
+}*/
+
+#about {
+    margin-top: 40px;
+    padding: 30px;
+    border-radius: 20px;
+    background-color: #ddd;
+    font: 100;
+    font-size: 16px;
+    font-family: Helvetica;
+}
+
+    #about ul li {
+        margin-top: 20px;
+    }
+
+.home {
+    width: 100%;
+    margin-top: 30px;
+    border-radius: 20px;
+    background-color: #ddd;
+    font: 100;
+    font-size: 16px;
+    font-family: Helvetica;
+    padding: 20px;
 }
