--- a/PixelStudio/Views/Shared/Error.cshtml
+++ b/PixelStudio/Views/Shared/Error.cshtml
@@ -7,7 +7,10 @@
 <body>
     <hgroup>
         <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        <h2>Your data is invalid</h2>
     </hgroup>
+    <div class="btn btn-default">
+        @Html.ActionLink("Go Home", "Home", "Home")
+    </div>
 </body>
 </html>
