--- a/PixelStudio/Views/Shared/_Layout.cshtml
+++ b/PixelStudio/Views/Shared/_Layout.cshtml
@@ -6,27 +6,14 @@
     <title>@ViewBag.Title Pixel Studio</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Content/Site.css" rel="stylesheet" />
     <style>
-        a:link {
-            color: cadetblue;
-        }
 
-        a:visited {
-            color: cadetblue;
-        }
-
-        a:active {
-            color: forestgreen;
-        }
-
-        a :hover {
-            color: brown;
-        }
-
+        
     </style>
-    
-        <link rel="shortcut icon" href="~/image/Site.ico" type="image/x-icon">
-    
+
+    <link rel="shortcut icon" href="~/image/Site.ico" type="image/x-icon">
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -37,23 +24,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Pixel Studio", "About_Company", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("About Pixel Studio", "About_Company", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+
                     <li>@Html.ActionLink("Home", "Home", "Home")</li>
-                    <li>@Html.ActionLink("Make Order", "Insert", "Home")</li>
+                    <li>@Html.ActionLink("Make Order", "Create_Order", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>&nbsp;</li>
+                    <li>@Html.ActionLink("Login", "Enter", "UserLogin")</li>
+                    <li>@Html.ActionLink("Register", "Register", "UserLogin")</li>
 
-
-                    <li class="nav-item dropdown" style="margin-left:500px;">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Authorization</a>
-                        <div style="background-color:#101010; text-align: center;padding: 10px;" class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="#">@Html.ActionLink("Login", "Enter", "UserLogin")</a>
-                            <a class="dropdown-item" href="#">@Html.ActionLink("Register", "Register", "UserLogin")</a>
-
-                        </div>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -64,7 +46,7 @@
     <div style="margin-top:20px; text-align:center">
         <hr />
         <footer>
-            <p >&copy; @DateTime.Now.Year - Pixel Studio<br />Project was created by Markovets N.S</p>
+            <p>&copy; @DateTime.Now.Year - Pixel Studio<br />Project was created by Markovets N.S</p>
         </footer>
     </div>
 
@@ -75,5 +57,6 @@
 
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
+
 </body>
 </html>
