--- a/PixelStudio/Views/UserLogin/Register.cshtml
+++ b/PixelStudio/Views/UserLogin/Register.cshtml
@@ -17,6 +17,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+        @*<label class="control-label col-md-2">Name</label>*@
         <div class="col-md-10">
             @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
@@ -25,6 +26,7 @@
 
     <div class="form-group">
         @Html.LabelFor(model => model.UserSurname, htmlAttributes: new { @class = "control-label col-md-2" })
+        @*<label class="control-label col-md-2">Surname</label>*@
         <div class="col-md-10">
             @Html.EditorFor(model => model.UserSurname, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.UserSurname, "", new { @class = "text-danger" })
@@ -50,6 +52,7 @@
     </div>
 
     <div class="form-group">
+        
         @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
@@ -63,14 +66,14 @@
         </div>
     </div>
     
-    <h3 color="green">@ViewBag.Name</h3>
+    <h3 class="alert-success" style="padding:20px;">@ViewBag.Name</h3>
     @*<h3 class="alert alert-success">@Html.ViewData["Message"]</h3>*@
     
 </div>
 }
 
 <div class="btn btn-default">
-    @Html.ActionLink("Go Home", "Home", "Home")
+    @Html.ActionLink("Go login", "Enter", "UserLogin")
 </div>
 
 @section Scripts {
