--- a/PixelStudio/Views/Home/MakeOrder.cshtml
+++ b/PixelStudio/Views/Home/MakeOrder.cshtml
@@ -7,11 +7,11 @@
 <h2>MakeOrder</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("MakeOrder", "Home", FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
-    @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
+        @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
     <h4>HomeSet</h4>
     <hr />
     @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -79,13 +79,14 @@
         </div>
     </div>
     
-    @*<div class="form-group">
+    <div class="form-group">
             @Html.LabelFor(model => model.image, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.image, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.image, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+        <div class="col-md-10">
+            <input type="file" name="file" />
+            
+            @Html.ValidationMessageFor(model => model.image, "", new { @class = "text-danger" })
+        </div>
+        </div>
 
     @*<div class="form-group">
         @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
