--- a/PixelStudio/Views/Home/Home.cshtml
+++ b/PixelStudio/Views/Home/Home.cshtml
@@ -20,19 +20,19 @@
 
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="~/image/инстабук.jpg" style="height:500px; width:500px" />
+                    <img src="~/Site-Images/инстабук.jpg" style="height:500px; width:500px" />
                     <div class="container">
                         <div class="carousel-caption"></div>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="~/image/рамка.jpg" style="height:500px; width:500px" />
+                    <img src="~/Site-Images/рамка.jpg" style="height:500px; width:500px" />
                     <div class="container">
                         <div class="carousel-caption"></div>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="~/image/Календарь.jpg" style="height:500px; width:500px" />
+                    <img src="~/Site-Images/Календарь.jpg" style="height:500px; width:500px" />
                     <div class="container">
                         <div class="carousel-caption"></div>
                     </div>
