--- a/PixelStudio/Views/Home/MakeOrder.cshtml
+++ b/PixelStudio/Views/Home/MakeOrder.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PixelStudio.ViewModels.HomeSet
 
 @{
-    ViewBag.Title = "MakeOrder";
+    ViewBag.Title = "Make Order";
 }
 
 <h2>MakeOrder</h2>
@@ -105,7 +105,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Go Home", "Home")
 </div>
 
 @section Scripts {
