--- a/PixelStudio/Views/Home/ShowColor.cshtml
+++ b/PixelStudio/Views/Home/ShowColor.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "ShowColor";
 }
 
-<h2>ShowColor</h2>
+<h2>Услуги для цветных фото</h2>
 
 @*<p>
     @Html.ActionLink("Create New", "Create")
@@ -15,22 +15,22 @@
             @Html.DisplayNameFor(model => model.ServiceId)
         </th>*@
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            Название услуги:
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PhotoFormat)
+            Формат фото:
         </th>
-        <th>
+        @*<th>
             @Html.DisplayNameFor(model => model.Description)
-        </th>
+        </th>*@
         @*<th>
             @Html.DisplayNameFor(model => model.ColorType)
         </th>*@
         <th>
-            @Html.DisplayNameFor(model => model.Price)
+            Цена за 1 шт.
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Image)
+            
         </th>
         <th></th>
     </tr>
@@ -46,9 +46,9 @@
         <td>
             @Html.DisplayFor(modelItem => item.PhotoFormat)
         </td>
-        <td>
+        @*<td>
             @Html.DisplayFor(modelItem => item.Description)
-        </td>
+        </td>*@
         @*<td>
             @Html.DisplayFor(modelItem => item.ColorType)
         </td>*@
@@ -56,7 +56,7 @@
             @Html.DisplayFor(modelItem => item.Price)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Image)
+            <img src="@Url.Content(item.Image)" width="200" height="200" />
         </td>
         <td>
             @Html.ActionLink("Buy", "MakeOrder", new { id = item.ServiceId })
