--- a/PixelStudio/Content/Site.css
+++ b/PixelStudio/Content/Site.css
@@ -57,6 +57,15 @@ body {
         background: rgba(255,0,0,0.4);
     }
 
+.Role{
+    color: cadetblue;
+    cursor: not-allowed;
+    opacity: 0.5;
+    text-decoration: none;
+    
+}
+
+
 /*a:link {
     color: cadetblue;
 }
