--- a/PixelStudio/Views/UserLogin/Register.cshtml
+++ b/PixelStudio/Views/UserLogin/Register.cshtml
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    
+
 
     <div class="form-group">
         @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -52,7 +52,7 @@
     </div>
 
     <div class="form-group">
-        
+
         @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
@@ -65,10 +65,13 @@
             <input type="submit" value="Register" class="btn btn-default" />
         </div>
     </div>
-    
-    <h3 class="alert-success" style="padding:20px;">@ViewBag.Name</h3>
+    @if (ViewBag.Name != null)
+    {
+        <h3 class="alert-success" style="padding:20px;">@ViewBag.Name</h3>
+    }
+
     @*<h3 class="alert alert-success">@Html.ViewData["Message"]</h3>*@
-    
+
 </div>
 }
 
