--- a/PixelStudio/Views/Home/ShopCard.cshtml
+++ b/PixelStudio/Views/Home/ShopCard.cshtml
@@ -7,7 +7,7 @@
 <h2>ShopCard</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "All_Services")
 </p>
 <table class="table">
     <tr>
